Massive clean up to project structure
